# cuda_boilerplate

./: CMakeLists.txt  README.md
include/: addImages.cu  saxpy.cu
src/: image.cu  main.cu
